[RED] Create tests for Payment Service