@@ -12,12 +12,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -27,31 +24,36 @@ class PaymentServiceImplTest {
     private PaymentRepository paymentRepository;
 
     @Mock
-    private OrderServiceImpl orderService;
+    private OrderService orderService;
 
     @InjectMocks
     private PaymentServiceImpl paymentService;
 
     private Order order;
-    private Map<String, String> paymentData;
+    private Map<String, String> validVoucherData;
+    private Map<String, String> invalidVoucherData;
+    private Map<String, String> validCashData;
+    private Map<String, String> invalidCashData;
 
     @BeforeEach
     void setUp() {
         order = new Order();
         order.setId("ORDER-123");
         order.setStatus("WAITING_PAYMENT");
+
+        validVoucherData = Map.of("voucherCode", "ESHOP1234567890");
+        invalidVoucherData = Map.of("voucherCode", "INVALID");
+        validCashData = Map.of("address", "123 Main St", "deliveryFee", "15000");
+        invalidCashData = Map.of("address", "");
     }
 
     @Test
     void testAddPaymentWithValidVoucher() {
-        paymentData = new HashMap<>();
-        paymentData.put("voucherCode", "ESHOP1234567890");
-
         when(paymentRepository.save(any(Payment.class))).thenAnswer(invocation ->
                 invocation.getArgument(0)
         );
 
-        Payment result = paymentService.addPayment(order, PaymentMethod.VOUCHER.getValue(), paymentData);
+        Payment result = paymentService.addPayment(order, PaymentMethod.VOUCHER.getValue(), validVoucherData);
 
         assertEquals(PaymentStatus.SUCCESS.getValue(), result.getStatus());
         assertEquals(order.getId(), result.getOrderId());
@@ -60,79 +62,58 @@ class PaymentServiceImplTest {
 
     @Test
     void testAddPaymentWithInvalidVoucher() {
-        paymentData = new HashMap<>();
-        paymentData.put("voucherCode", "INVALID_CODE");
-
         when(paymentRepository.save(any(Payment.class))).thenAnswer(invocation ->
                 invocation.getArgument(0)
         );
 
-        Payment result = paymentService.addPayment(order, PaymentMethod.VOUCHER.getValue(), paymentData);
-
+        Payment result = paymentService.addPayment(order, PaymentMethod.VOUCHER.getValue(), invalidVoucherData);
         assertEquals(PaymentStatus.REJECTED.getValue(), result.getStatus());
     }
 
     @Test
     void testAddPaymentWithValidCashOnDelivery() {
-        paymentData = new HashMap<>();
-        paymentData.put("address", "123 Main St");
-        paymentData.put("deliveryFee", "15000");
-
         when(paymentRepository.save(any(Payment.class))).thenAnswer(invocation ->
                 invocation.getArgument(0)
         );
 
-        Payment result = paymentService.addPayment(order, PaymentMethod.CASH_ON_DELIVERY.getValue(), paymentData);
-
+        Payment result = paymentService.addPayment(order, PaymentMethod.CASH_ON_DELIVERY.getValue(), validCashData);
         assertEquals(PaymentStatus.SUCCESS.getValue(), result.getStatus());
     }
 
     @Test
     void testAddPaymentWithInvalidCashOnDelivery() {
-        paymentData = new HashMap<>();
-        paymentData.put("address", "");
-
         when(paymentRepository.save(any(Payment.class))).thenAnswer(invocation ->
                 invocation.getArgument(0)
         );
 
-        Payment result = paymentService.addPayment(order, PaymentMethod.CASH_ON_DELIVERY.getValue(), paymentData);
-
+        Payment result = paymentService.addPayment(order, PaymentMethod.CASH_ON_DELIVERY.getValue(), invalidCashData);
         assertEquals(PaymentStatus.REJECTED.getValue(), result.getStatus());
     }
 
     @Test
     void testSetStatusToSuccessUpdatesOrder() {
-        Payment payment = Payment.builder()
-                .id("PAY-001")
-                .orderId(order.getId())
-                .status(PaymentStatus.WAITING.getValue())
-                .build();
+        Payment payment = new Payment();
+        payment.setOrderId(order.getId());
+        payment.setStatus(PaymentStatus.WAITING.getValue());
 
-        when(orderService.getOrderById(order.getId())).thenReturn(order);
+        when(orderService.findById(order.getId())).thenReturn(order);
 
         Payment result = paymentService.setStatus(payment, PaymentStatus.SUCCESS.getValue());
-
         assertEquals(PaymentStatus.SUCCESS.getValue(), result.getStatus());
-        assertEquals("SUCCESS", order.getStatus());
-        verify(orderService).updateOrder(order);
+        verify(orderService).updateStatus(order.getId(), "SUCCESS");
     }
 
     @Test
     void testGetPaymentById() {
         Payment payment = new Payment();
-        when(paymentRepository.findById("PAY-001")).thenReturn(payment);
-
-        Payment result = paymentService.getPayment("PAY-001");
-        assertEquals(payment, result);
+        when(paymentRepository.findById("PAY-123")).thenReturn(payment);
+        assertEquals(payment, paymentService.getPayment("PAY-123"));
     }
 
     @Test
     void testGetAllPayments() {
-        List<Payment> payments = List.of(new Payment(), new Payment());
+        List<Payment> payments = Arrays.asList(new Payment(), new Payment());
         when(paymentRepository.findAll()).thenReturn(payments);
-
-        List<Payment> result = paymentService.getAllPayments();
-        assertEquals(2, result.size());
+        assertEquals(2, paymentService.getAllPayments().size());
     }
 }
